// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TSC: es6/spread arrayLiteralSpread 1`] = `
"function f0() {
	var a = [1, 2, 3];
	var a1 = [...a];
	var a2 = [1, ...a];
	var a3 = [1, 2, ...a];
	var a4 = [...a, 1];
	var a5 = [...a, 1, 2];
	var a6 = [1, 2, ...a, 1, 2];
	var a7 = [1, ...a, 2, ...a];
	var a8 = [...a, ...a, ...a];
}
function f1() {
	var a = [1, 2, 3];
	var b = ["hello", ...a, true];
	var b;
}
function f2() {
	var a = [...[...[...[...[...[]]]]]];
	var b = [...[...[...[...[...[5]]]]]];
}
"
`;

exports[`TSC: es6/spread arrayLiteralSpreadES5iterable 1`] = `
"function f0() {
	var a = [1, 2, 3];
	var a1 = [...a];
	var a2 = [1, ...a];
	var a3 = [1, 2, ...a];
	var a4 = [...a, 1];
	var a5 = [...a, 1, 2];
	var a6 = [1, 2, ...a, 1, 2];
	var a7 = [1, ...a, 2, ...a];
	var a8 = [...a, ...a, ...a];
}
function f1() {
	var a = [1, 2, 3];
	var b = ["hello", ...a, true];
	var b;
}
function f2() {
	var a = [...[...[...[...[...[]]]]]];
	var b = [...[...[...[...[...[5]]]]]];
}
"
`;

exports[`TSC: es6/spread arraySpreadImportHelpers 1`] = `
"const k = [1, , 2];
const o = [3, ...k, 4];
// this is a pre-TS4.4 versions of emit helper, which always forced array packing
"
`;

exports[`TSC: es6/spread arraySpreadInCall 1`] = `
"f1(1, 2, 3, 4, ...[5, 6]);
f1(...[1], 2, 3, 4, 5, 6);
f1(1, 2, ...[3, 4], 5, 6);
f1(1, 2, ...[3], 4, ...[5, 6]);
f1(...[1, 2], ...[3, 4], ...[5, 6]);
f1(...(([1, 2])), ...(((([3, 4])))), ...([5, 6]));
const x21 = f2(...[1, "foo"]);
const x22 = f2(true, ...[1, "foo"]);
const x23 = f2(...([1, "foo"]));
const x24 = f2(true, ...([1, "foo"]));
const x31 = f3(...[1, "foo"]);
const x32 = f3(true, ...[1, "foo"]);
const x33 = f3(...([1, "foo"]));
const x34 = f3(true, ...([1, "foo"]));
const x41 = f4(...[1, "foo"]);
const x42 = f4(true, ...[1, "foo"]);
const x43 = f4(...([1, "foo"]));
const x44 = f4(true, ...([1, "foo"]));
// dicovered in #52845#issuecomment-1459132562
action.run(...[100, "foo"]);
// error
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array = [...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray10 1`] = `
"class SymbolIterator {
	[Symbol.iterator]() {
		return this;
	}
}
var array = [...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray11 1`] = `
"var iter;
var array = [...iter];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray2 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class NumberIterator {
	next() {
		return { value: 0, done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array = [...new NumberIterator(), ...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray3 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array = [...[0, 1], ...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray4 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array = [0, 1, ...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray5 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array = [0, 1, ...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray6 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array = [0, 1];
array.concat([...new SymbolIterator()]);
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray7 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array;
array.concat([...new SymbolIterator()]);
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray8 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
}
var array = [...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInArray9 1`] = `
"class SymbolIterator {
	next() {
		return { value: Symbol() };
	}
	[Symbol.iterator]() {
		return this;
	}
}
var array = [...new SymbolIterator()];
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall 1`] = `
"function foo(s) {
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall10 1`] = `
"function foo(s) {
	return s[0];
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall11 1`] = `
"function foo(...s) {
	return s[0];
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall12 1`] = `
"class Foo {
	constructor(...s) {
	}
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class _StringIterator {
	next() {
		return { value: "", done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
new Foo(...[...new SymbolIterator(), ...[...new _StringIterator()]]);
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall2 1`] = `
"function foo(s) {
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall3 1`] = `
"function foo(...s) {
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall4 1`] = `
"function foo(s1,...s) {
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall5 1`] = `
"function foo(...s) {
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class _StringIterator {
	next() {
		return { value: "", done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator(), ...new _StringIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall6 1`] = `
"function foo(...s) {
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class _StringIterator {
	next() {
		return { value: "", done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator(), ...new _StringIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall7 1`] = `
"function foo(...s) {
	return s[0];
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class _StringIterator {
	next() {
		return { value: "", done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
foo(...new SymbolIterator(), ...new _StringIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall8 1`] = `
"class Foo {
	constructor(...s) {
	}
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class _StringIterator {
	next() {
		return { value: "", done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
new Foo(...new SymbolIterator(), ...new _StringIterator());
"
`;

exports[`TSC: es6/spread iteratorSpreadInCall9 1`] = `
"class Foo {
	constructor(...s) {
	}
}
class SymbolIterator {
	next() {
		return { value: Symbol(), done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
class _StringIterator {
	next() {
		return { value: "", done: false };
	}
	[Symbol.iterator]() {
		return this;
	}
}
new Foo(...new SymbolIterator(), ...[...new _StringIterator()]);
"
`;
